<resources>
    <string name="app_name">AirCar</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="postCar">Post a car</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="drivingExperience">Driving Experience</string>
    <string name="lessthanyear">Less than a year</string>
    <string name="lessthan5">Less than 5 years</string>
    <string name="lessthan10">Less than 10 years</string>
    <string name="morethan10">More than 10 years</string>
    <string name="whereToRent">Where to look?</string>
    <string name="priceRange">Price Range</string>
    <string name="dates">Dates</string>
    <string name="dateFrom">From</string>
    <string name="dateTo">To</string>
    <string name="calendar_error_from_after_to">The start date must be before return date!</string>
    <string name="calendar_error_to_before_from">The return date must be after start date!</string>
    <string name="dateBeforeToday">The date cannot be in the past!</string>
    <string name="search">Search</string>
    <string name="available">Available</string>
    <string name="description">Description</string>
    <string name="reserve">Reserve</string>
    <string name="congratulations">Congratulations!</string>
    <string name="alreadyReserved">You already reserved this car.</string>
    <string name="carReserved">Your car has been reserved. The owner will contact you using email.</string>
    <string name="carNotReserved">Failed to reserve a car, please try again.</string>
    <string name="congratsText">Car owner\'s contact information and instruction have been successfully sent to your email. You car have been reserved for the following dates:</string>
    <string name="goBack">Back To Menu</string>
    <string name="loadingFavPosts">Loading favourite posts, please wait.</string>
    <string name="loadingHistory">"Loading history, please wait&#8230;"</string>
    <string name="checkNetwork">"Check your connection, if you think it takes too long."</string>
    <string name="noHistoryFound">No history seem to be found, reserve a car first.</string>
    <string name="searchFail">Please fill out location and dates.</string>
    <string name="carFetchFail">Failed to load the post.</string>
    <string name="make">Make: </string>
    <string name="model">Model: </string>
    <string name="engine">Engine: </string>
    <string name="priceDay">Price/d: </string>
    <string name="euro">\u20ac</string>
    <string name="viewId">2131624183</string>
    <string name="postDeleted">Post successfully deleted!</string>
    <string name="postNotDeleted">Failed to delete post, try again.</string>
    <string name="save">Save</string>
    <string name="carSaved">Car already saved.</string>
    <string name="carSaveSuccess">Car saved.</string>
    <string name="carSaveNotSuccess">Failed to save the car.</string>
    <string name="noPostFound">You don\'t have any posts currently.</string>
    <string name="noCarsFound">No cars found in that area.</string>
    <string name="loginFailed">Login Failed, please try again.</string>
    <string name="blankCridentials">Your cridentials cannot be blank.</string>
    <string name="shortCridentials">Your cridentials cannot be shorter than 6 characters.</string>
    <string name="passwordDontMatch">Passwords dont match.</string>
    <string name="invalidEmail">Invalid email.</string>
    <string name="registrationSuccess">Registration success</string>
    <string name="registrationFailed">Registration failed.</string>
    <string name="loginSuccess">Login successful.</string>
    <string name="next">Next</string>
    <string name="reset">Reset</string>
    <string name="selectExperience">Please select experience.</string>
    <string name="hey">Hey !</string>
    <string name="feedbackBody">I would like to give you following feedback: </string>
    <string name="regards">Regards,</string>
    <string name="mailGenerated">Mail generated by: www.erpamdevelopment.com</string>
    <string name="noClient">There is no email client installed.</string>
    <string name="hello">Hello, I am interested in renting your car for </string>
    <string name="inDates">, in the following dates: </string>
    <string name="yourLocation">Your Location</string>
    <string name="turnOnLocation">Please turn on location services.</string>
    <string name="pleaseFillLocation">Please fill in location.</string>
    <string name="datesBlank">Please fill in both dates.</string>
    <string name="chooseACar">You can choose your make and model.</string>
    <string name="welcome">Welcome</string>
    <string name="updateProfile">Update profile</string>
    <string name="logOut">Log out</string>
    <string name="feedback">Feedback</string>
    <string name="other">More</string>
    <string name="updateYourProfile">Update Your Profile</string>
    <string name="update">Update</string>
    <string name="updateFailed">Update failed.</string>
    <string name="updateSuccess">Details updated.</string>
    <string name="somethingWrong">Please log in.</string>
    <string name="areYouSure">Are you sure?</string>
    <string name="keepSearching">Keep Searching</string>
    <string name="failedToLogOut">Failed to log out.</string>
    <string name="erpamEmail">info@erpamdevelopment.com</string>
    <string-array name="tabs">
        <item>Search</item>
        <item>Favourites</item>
        <item>History</item>
        <item>Near-by</item>
    </string-array>
    <string-array name="makeArray">
        <item>Any Make</item>
        <item>Alfa Romeo</item>
        <item>Audi</item>
        <item>BMW</item>
        <item>Fiat</item>
        <item>Ford</item>
        <item>Honda</item>
        <item>Hyundai</item>
        <item>Lexus</item>
        <item>Mazda</item>
        <item>Mercedes-Benz</item>
        <item>Nissan</item>
        <item>Opel</item>
        <item>Peugeot</item>
        <item>Seat</item>
        <item>Volvo</item>
    </string-array>
    <string-array name="emptyArray">
        <item>Any Model</item>
    </string-array>
    <string-array name="alfaRomeoArray">
        <item>Any Model</item>
        <item>145</item>
        <item>146</item>
        <item>147</item>
        <item>156</item>
        <item>159</item>
        <item>166</item>
        <item>Alfasud</item>
        <item>Brera</item>
        <item>Giulietta</item>
        <item>GT</item>
        <item>Mito</item>
        <item>Spider</item>
    </string-array>
    <string-array name="audiArray">
        <item>Any Model</item>
        <item>80</item>
        <item>100</item>
        <item>A1</item>
        <item>A2</item>
        <item>A3</item>
        <item>A4</item>
        <item>A5</item>
        <item>A6</item>
        <item>A7</item>
        <item>Q3</item>
        <item>Q5</item>
        <item>Q7</item>
        <item>R8</item>
        <item>RS4</item>
        <item>RS5</item>
        <item>RS6</item>
        <item>S3</item>
        <item>S4</item>
        <item>S5</item>
        <item>S8</item>
        <item>TT</item>
        <item>TTS</item>
    </string-array>
    <string-array name="bmwArray">
        <item>Any Model</item>
        <item>1-series</item>
        <item>2-series</item>
        <item>3-series</item>
        <item>4-series</item>
        <item>5-series</item>
        <item>6-series</item>
        <item>7-series</item>
        <item>8-series</item>
        <item>i3</item>
        <item>i8</item>
        <item>M3</item>
        <item>M4</item>
        <item>M5</item>
        <item>M6</item>
        <item>X1</item>
        <item>X3</item>
        <item>X4</item>
        <item>X5</item>
        <item>X6</item>
        <item>Z3</item>
        <item>Z4</item>
    </string-array>
    <string-array name="fiatArray">
        <item>Any Model</item>
        <item>125</item>
        <item>126p</item>
        <item>500</item>
        <item>Bravo</item>
        <item>Coupe</item>
        <item>Punto</item>
        <item>Uno</item>
    </string-array>
    <string-array name="fordArray">
        <item>Any Model</item>
        <item>Anglia</item>
        <item>B-MAX</item>
        <item>Cargo</item>
        <item>C-Max</item>
        <item>Cougar</item>
        <item>ECOSPORT</item>
        <item>Escort</item>
        <item>Fiesta</item>
        <item>Focus</item>
        <item>GT</item>
        <item>KA</item>
        <item>Mondeo</item>
        <item>Mustang</item>
        <item>S-MAX</item>
        <item>Transit</item>
    </string-array>
    <string-array name="hondaArray">
        <item>Any Model</item>
        <item>Accord</item>
        <item>Civic</item>
        <item>CR</item>
        <item>FR</item>
        <item>HR</item>
        <item>Insight</item>
        <item>Integra</item>
        <item>Stepwagon</item>
    </string-array>
    <string-array name="hyundaiArray">
        <item>Any Model</item>
        <item>Accent</item>
        <item>Amica</item>
        <item>Coupe</item>
        <item>i10</item>
        <item>i20</item>
        <item>i30</item>
        <item>i40</item>
        <item>i800</item>
        <item>Montana</item>
        <item>Sonata</item>
        <item>Tucson</item>
    </string-array>
    <string-array name="lexusArray">
        <item>Any Model</item>
        <item>CT</item>
        <item>GS</item>
        <item>IS</item>
        <item>LS</item>
        <item>RX</item>
        <item>SC</item>
        <item>Soarer</item>
    </string-array>
    <string-array name="mazdaArray">
        <item>Any Model</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>5</item>
        <item>6</item>
        <item>CX-3</item>
        <item>CX-5</item>
        <item>CX-7</item>
        <item>MPV</item>
        <item>MX-3</item>
        <item>MX-5</item>
        <item>MX-6</item>
        <item>RX-7</item>
        <item>RX-8</item>
    </string-array>
    <string-array name="mercedesArray">
        <item>Any Model</item>
        <item>190</item>
        <item>200</item>
        <item>220</item>
        <item>230</item>
        <item>240</item>
        <item>250</item>
        <item>280</item>
        <item>300</item>
        <item>320</item>
        <item>350</item>
        <item>380</item>
        <item>500</item>
        <item>600</item>
        <item>A-Class</item>
        <item>B-Class</item>
        <item>C-Class</item>
        <item>CE-Class</item>
        <item>CL-Class</item>
        <item>CLA-Class</item>
        <item>CLK-Class</item>
        <item>CLS-Class</item>
        <item>E-Class</item>
        <item>G-Class</item>
        <item>GLA</item>
        <item>R-Class</item>
        <item>S-Class</item>
        <item>SLK-Class</item>
        <item>V-Class</item>


    </string-array>
    <string-array name="nissanArray">
        <item>Any Model</item>
        <item>100 NX</item>
        <item>103 NX</item>
        <item>Almera</item>
        <item>Cube</item>
        <item>D21</item>
        <item>D22</item>
        <item>GT-R</item>
        <item>Maxima</item>
        <item>Micra</item>
        <item>Pathfinder</item>
        <item>Primera</item>
        <item>Qashqai</item>
        <item>Terrano</item>
        <item>ZX</item>
    </string-array>
    <string-array name="openArray">
        <item>Any Model</item>
        <item>Adam</item>
        <item>Astra</item>
        <item>Corsa</item>
        <item>Insignia</item>
        <item>Omega</item>
        <item>Tigra</item>
        <item>Vectra</item>
        <item>Zafira</item>
    </string-array>
</resources>