<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.eryk.aircar.LoginActivity"
    android:background="@drawable/gradient">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/activity_register_mainHeader"
        android:text="@string/register"
        android:textSize="42sp"
        android:layout_centerHorizontal="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:textColor="@color/white"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/activity_register_email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:hint="@string/email"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/activity_register_mainHeader"
        android:layout_alignStart="@+id/activity_register_password"
        android:layout_alignEnd="@+id/activity_register_password" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/activity_register_repassword"
        android:hint="@string/confirmpassword"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_below="@+id/activity_register_password"
        android:layout_centerHorizontal="true" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/activity_register_radioGroup"
        android:layout_below="@+id/activity_register_repassword"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/drivingExperience"
            android:id="@+id/activity_register_header"
            android:textSize="28sp"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:textAlignment="center"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lessthanyear"
            android:buttonTint="@color/white"
            android:textColor="@color/white"
            android:id="@+id/radioLessThanYear"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lessthan5"
            android:buttonTint="@color/white"
            android:textColor="@color/white"
            android:id="@+id/radioLessThanFive"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lessthan10"
            android:buttonTint="@color/white"
            android:textColor="@color/white"
            android:id="@+id/radioLessThan10"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/morethan10"
            android:buttonTint="@color/white"
            android:textColor="@color/white"
            android:id="@+id/radioMoreThan10"/>

    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/activity_register_regButton"
        android:layout_marginTop="12dp"
        android:text="@string/register"
        android:background="@color/white"
        android:textColor="@color/main_blue"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/activity_register_password"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_below="@+id/activity_register_email"
        android:layout_alignStart="@+id/activity_register_repassword" />


</RelativeLayout>
