<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.eryk.aircar.LoginActivity"
    android:background="@drawable/gradient">


    <android.support.v4.view.ViewPager
        android:id="@+id/activity_login_image"
        android:layout_height="220sp"
        android:layout_width="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignWithParentIfMissing="false"
        android:visibility="visible">
    </android.support.v4.view.ViewPager>


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/activity_login_email"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/activity_login_image"
        android:layout_alignEnd="@+id/activity_login_password"
        android:layout_alignStart="@+id/activity_login_password" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:ems="10"
        android:id="@+id/activity_login_password"
        android:hint="@string/password"
        android:layout_below="@+id/activity_login_email"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/activity_login_loginButton"
        android:layout_marginTop="12dp"
        android:text="@string/login"
        android:background="@color/white"
        android:textColor="@color/main_blue"
        android:layout_below="@+id/activity_login_password"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/white"
        android:layout_marginTop="34dp"
        android:id="@+id/activity_login_horizontal_line"
        android:layout_below="@+id/activity_login_loginButton"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_login_horizontal_line"
        android:layout_centerHorizontal="true"
        android:text="@string/register"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:textColor="@color/white"
        android:id="@+id/activity_login_registerButton"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_login_registerButton"
        android:id="@+id/activity_login_postCarButton"
        android:layout_centerHorizontal="true"
        android:text="@string/postCar"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"/>


</RelativeLayout>
